trunk/Archive2/b2/42d096daf2fa87/output
main.cpp: In function 'int main()':
main.cpp:18:10: error: no match for 'operator+' (operand types are 'X' and 'X')
     X {} + X {};
          ^
